<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>pc_filter_ros</name>
  <version>1.0.0</version>
  <description>PointCloud Filter for ROS</description>
  <maintainer email="ting.chang@adlinktech.com">Ting Chang</maintainer>
  <author>Ting Chang</author>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>pcl</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>

</package>


